packages/edxml-test-corpus/edxml-test-corpus-3.0.0.dev2.tar.gz/edxml-test-corpus-3.0.0.dev2/edxml_test_corpus/tests/invalid/structure/foreign-element-without-namespace.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Testing if a foreign element with no namespace is rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <f:without-namespace xmlns:f=""/>
</edxml>
